src/objects/Credential__mdt.object
<CustomObject>
    <description>used to store prod and dev API keys</description>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Credential</label>
    <pluralLabel>Credentials</pluralLabel>
</CustomObject>